# robo-i-star

./: README.md
Dronekit-Examples/channel_overrides/: channel_overrides.py
arduino/6WDteensy/: 6WDteensy.ino
arduino/_6WDcode/: Receiverinterrupt.ino  _6WDcode.ino  hbridge.ino
arduino/introductory sessions/servo_1/: servo_1.ino
arduino/introductory sessions/servo_2/: servo_2.ino
arduino/introductory sessions/servo_3/: servo_3.ino
arduino/introductory sessions/servo_4/: servo_4.ino
arduino/prototype/Robo-I-Star_Prototype/: Robo-I-Star_Prototype.ino
arduino/robo-i-star/: robo-i-star.ino
catkin_ws/devel/: .catkin  .rosinstall  setup.sh
docs/: example_waypoint.waypoints
lidar/: CMakeLists.txt  receive.cpp
lidar/launch/: .lidar.rviz.swp  lidar.rviz  obstacleAvoidance.launch  view_obstacleAvoidance.launch
lidar/msg/: avoid.msg
lidar/src/: obstacleAvoidance.cpp
prototype/: Robo-I-Star_Prototype.ino
robo-i-star/: LocationAudio.py  filereader.py  gui.py  lidarmsg.txt  main.py  roslisten.py  rosmain.py
robo-i-star/audio/: Text for Audio.docx
robo-i-star/introductory sessions/: mouseread.py  mouseservo.py
robo-i-star/mission/: Everitt.waypoints  engineering_hall_backwards.waypoints  everitt_lab_backwards.waypoints  everitt_lab_forward.waypoints  grainger_backwards.waypoints  material_science_forward.waypoints  mechanical_lab_forward.waypoints  talbot_lab_backwards.waypoints  talbot_lab_forward.waypoints  waypoints.waypoints
robo-i-star/tests/: engineering_hall_forward.waypoints  everitt_lab_backwards.waypoints  everitt_lab_forward.waypoints  grainger_forward.waypoints  material_science_backwards.waypoints  material_science_forward.waypoints  mechanical_lab_backwards.waypoints  talbot_lab_forward.waypoints
(+53 files in other folders)
